prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_comparison_to_int.nut
// EXPECTED: compile-time error - comparison produces bool, assigned to int
local a: int = 10
local b: int = 20
local c: int = a > b
return c
